// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product RHEL config should apply graph configuration: filters 1`] = `
{
  "groupedFiltersSettings": {
    "settings": {
      "isStandalone": false,
      "metric": undefined,
      "metrics": [
        {
          "chartType": "area",
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "Sockets_physical",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "metric": "Sockets",
          "query": {
            "category": "physical",
          },
          "stroke": "#06c",
          "strokeWidth": 2,
        },
        {
          "chartType": "area",
          "color": "#009596",
          "fill": "#a2d9d9",
          "id": "Sockets_hypervisor",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "metric": "Sockets",
          "query": {
            "category": "hypervisor",
          },
          "stroke": "#009596",
          "strokeWidth": 2,
        },
        {
          "chartType": "area",
          "color": "#5752d1",
          "fill": "#b2b0ea",
          "id": "Sockets_cloud",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "metric": "Sockets",
          "query": {
            "category": "cloud",
          },
          "stroke": "#5752d1",
          "strokeWidth": 2,
        },
        {
          "chartType": "threshold",
          "id": "threshold_Sockets",
          "isCapacity": true,
          "isStacked": false,
          "isStandalone": false,
          "isThreshold": true,
          "metric": "Sockets",
          "stroke": "#4cb140",
          "strokeDasharray": "4,3",
          "strokeWidth": 3,
        },
      ],
    },
  },
  "standaloneFiltersSettings": [],
}
`;

exports[`Product RHEL config should apply graph configuration: settings 1`] = `{}`;

exports[`Product RHEL config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product RHEL config should apply hosts inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem
         
        t(curiosity-inventory.label, {"context":"numberOfGuests","count":3}, [object Object])
      </React.Fragment>,
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"measurementType"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cores": {
      "title": "t(curiosity-inventory.header, {"context":"cores"})",
      "value": 12,
    },
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "hardwareType": {
      "title": "t(curiosity-inventory.header, {"context":"hardwareType"})",
      "value": "ipsum",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "measurementType": {
      "title": "t(curiosity-inventory.header, {"context":"measurementType"})",
      "value": null,
    },
    "numberOfGuests": {
      "title": "t(curiosity-inventory.header, {"context":"numberOfGuests"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "value": 10,
    },
  },
}
`;

exports[`Product RHEL config should apply hosts inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.measurementType, {"context":null})
         
        <Label
          color="purple"
        >
          t(curiosity-inventory.cloudProvider, {"context":"dolor sit"})
        </Label>
      </React.Fragment>,
    },
    {
      "title": 10,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"measurementType"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "cloudProvider": {
      "title": "t(curiosity-inventory.header, {"context":"cloudProvider"})",
      "value": "dolor sit",
    },
    "cores": {
      "title": "t(curiosity-inventory.header, {"context":"cores"})",
      "value": 12,
    },
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "hardwareType": {
      "title": "t(curiosity-inventory.header, {"context":"hardwareType"})",
      "value": "ipsum",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": null,
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": null,
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "measurementType": {
      "title": "t(curiosity-inventory.header, {"context":"measurementType"})",
      "value": null,
    },
    "numberOfGuests": {
      "title": "t(curiosity-inventory.header, {"context":"numberOfGuests"})",
      "value": 3,
    },
    "sockets": {
      "title": "t(curiosity-inventory.header, {"context":"sockets"})",
      "value": 10,
    },
  },
}
`;

exports[`Product RHEL config should apply subscriptions inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "hello world",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "2022-01-01",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"quantity"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "value": "hello world",
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total, {"context":"capacity"})",
      "value": 2000,
    },
  },
}
`;

exports[`Product RHEL config should apply subscriptions inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": "",
    },
    {
      "title": <Tooltip
        content="t(curiosity-inventory.label_has_infinite_quantity, {})"
        distance={5}
        enableFlip={false}
        entryDelay={100}
        exitDelay={0}
        isNoWrap={false}
        position="top"
      >
        <ChartIcon
          aria-label="t(curiosity-inventory.label_has_infinite_quantity, {})"
          fill={null}
          size="sm"
          symbol="infinity"
          title={null}
        />
      </Tooltip>,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"quantity"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"subscriptions"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "has_infinite_quantity": {
      "title": "t(curiosity-inventory.header_has_infinite, {"context":"quantity"})",
      "value": true,
    },
    "next_event_date": {
      "title": "t(curiosity-inventory.header_next_event, {"context":"date"})",
      "value": null,
    },
    "product_name": {
      "title": "t(curiosity-inventory.header_product, {"context":"name"})",
      "value": "lorem",
    },
    "service_level": {
      "title": "t(curiosity-inventory.header_service, {"context":"level"})",
      "value": null,
    },
    "total_capacity": {
      "title": "t(curiosity-inventory.header_total, {"context":"capacity"})",
      "value": 2000,
    },
  },
}
`;
